# actixProgarm

./: .env  Cargo.toml
sql/: course.sql  teacher.sql
wasm-client/: Cargo.toml  LICENSE_MIT
wasm-client/src/: errors.rs  lib.rs
wasm-client/src/models/: course.rs
webapp/: Cargo.toml
webapp/ static/: teachers.html
webapp/src/: handlers.rs  main.rs  mod.rs  models.rs  routers.rs
webservice/: Cargo.toml
webservice/src/: errors.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
